# casc-daw-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: gui-protocol.md
include/: casc_daw_sdk.h
reaper/: reaper_casc.c  reaper_plugin_min.h
tests/: sdk_selftest.c
